# contra.mate

./: .gitignore  404.html  CLAUDE.md  Dockerfile.backend  Dockerfile.ui  FILTER_MIGRATION_SUMMARY.md  MIGRATION_GUIDE.md  OPENSEARCH_FILTERS.md  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  presentation.md  progress.md  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
app-debug/: index.html
components/agents/contract-metadata-insight/: index.html
docs/: README.md  app-debug.md  index.md  plan.md  postgres-migration.md  presentation.md
docs/components/agents/: contract-metadata-insight.md
docs/getting-started/: installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: contract_metadata_insight_examples.py  enrichment_example.py  full_agent_pipeline_example.py  metadata_extraction_service_example.py  metadata_parser_example.py  talk_to_contract_with_filters.py  test_multi_doc_efficiency.py  verify_document_exists.py
frontend/: Dockerfile  package.json  pnpm-lock.yaml
frontend/app/: page.tsx
frontend/docs/: application-data-flow.md
frontend/src/lib/: api.ts
getting-started/installation/: index.html
getting-started/quickstart/: index.html
notebooks/: agent-talk-to-contract.ipynb  agent-with-pydantic-ai.ipynb  clauses-analysis.ipynb  connect-to-postgres.ipynb  markdown-file-analysis.ipynb  opensearch_filter_testing.ipynb  sample_data_ids.py
plan/: index.html
postgres-migration/: index.html
presentation/: index.html
scripts/: README.md  create_dynamodb_table.py  run_streamlit.sh  sync_data_to_s3.sh  test_agent_directly.py  test_api_client.py  test_docker_api.py  test_guardrail_direct.py  test_message_history_conversion.py  test_metadata_insight_agent.py  test_migration.py  test_retry_logic.py  test_select_star_guardrail.py  test_vanilla_agent.py  verify_migration.py
search/: search_index.json
src/contramate/: __init__.py
src/contramate/api/: main.py
src/contramate/dbs/: __init__.py  catalog.py  postgres_db.py
src/contramate/domain/: __init__.py
src/contramate/interfaces/: __init__.py
src/contramate/llm/: __init__.py  azure_openai_client.py  azure_openai_embedding_client.py  base.py  factory.py  litellm_client.py  litellm_embedding_client.py  openai_client.py  openai_embedding_client.py
src/contramate/models/: __init__.py  document.py  filters.py  gold.py  messages.py  platinum.py  vector.py
src/contramate/services/: __init__.py  contract_metadata_insight_service.py  contract_service.py  conversation_service.py  dynamodb_status_service.py  (+15 more)
src/tools/: __init__.py  chunk_documents.py  extract_metadata.py  fix_platinum_cache.py  gold_to_platinum.py  import_examples.py  index_chunks.py  index_documents.py  init_status_tables.py  load_contract_data.py  migrate_to_postgres.py  opensearch_infra_manager.py  pdf_to_markdown.py  reorganize_contract_pdfs.py  silver_to_gold.py  status_checker.py  test_conversation_adapter.py  test_search.py
src/ui/: __init__.py  app.py
tests/integration/: test_talk_to_contract_filters.py
(+81 files in other folders)
