[project]
name = "contramate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MrDataPsycho", email = "mr.data.psycho@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "opensearch-py>=2.4.0",
    "psycopg2-binary>=2.9.7",
    "boto3>=1.29.0",
    "sqlmodel>=0.0.14",
    "loguru>=0.7.3",
    "pydantic-settings>=2.10.1",
    "openai>=1.108.1",
    "litellm>=1.40.0,<1.50.0",
]

[project.scripts]
contramate = "contramate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "rich>=14.1.0",
    "typer>=0.19.1",
]

[project.optional-dependencies]
dev = [
    "typer>=0.15.1",
    "rich>=13.9.5",
]
